--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#root{
+  min-height:400px;
+  width:400px;
+  background-color: red;
+  margin:20px auto;
+  text-align: center;
+
+}
+input ,h1,button{
+  width:200px;
+  height: 50px;
+  border-radius: 10px;
+}
+
